--- a/configure.ac
+++ b/configure.ac
@@ -51,6 +51,7 @@ AC_SUBST(poppler_glib_LIBS)
 AC_CHECK_HEADERS(GL/gl.h)
 AC_CHECK_HEADERS(GL/glu.h)
 AC_CHECK_HEADERS(GL/glx.h)
+AC_CHECK_HEADERS(GL/glut.h)
 
 AX_BOOST_BASE([1.33.1])
 AX_BOOST_PROGRAM_OPTIONS()
