Applying Pino Toscano's patch
git-svn-id: http://code.100allora.it/svn/pdfcube/trunk@61 165fd137-3324-0410-9f0b-cb3619fb7445

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,8 +3,8 @@ bin_PROGRAMS = pdfcube
 pdfcube_SOURCES = pdfcube.cc
 pdfcube_CXXFLAGS = -Wall -Weffc++ 
 
-LDADD = $(glib_LIBS) $(gtk_LIBS) $(gtkglext_LIBS) $(poppler_LIBS) $(poppler_glib_LIBS) -lglut 
-INCLUDES = $(glib_CFLAGS) $(gtk_CFLAGS) $(gtkglext_CFLAGS) $(poppler_CFLAGS) $(poppler_glib_CFLAGS) $(BOOST_LDFLAGS)
+LDADD = $(glib_LIBS) $(gtk_LIBS) $(gtkglext_LIBS) $(poppler_glib_LIBS) -lglut 
+INCLUDES = $(glib_CFLAGS) $(gtk_CFLAGS) $(gtkglext_CFLAGS) $(poppler_glib_CFLAGS) $(BOOST_LDFLAGS)
 
 AM_CXXFLAGS = $(BOOST_CPPFLAGS) 
 AM_LDFLAGS=$(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB)
