distributing man file. still missing man file installation.
git-svn-id: http://code.100allora.it/svn/pdfcube/trunk@67 165fd137-3324-0410-9f0b-cb3619fb7445

--- a/configure.ac
+++ b/configure.ac
@@ -59,5 +59,6 @@ dnl -----------------------------------------------
 
 AC_OUTPUT(Makefile \
           src/Makefile \
-	  m4/Makefile
+	  m4/Makefile \
+	  man/Makefile
 )
